# Pharmageddon

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  setup_deprecated.py
src/: inference.py  main.py  train.py  webapp.py
src/config/: train.conf
src/graph/: graph_functions.py  hypernode_loader.py
src/model/: layers.py  model.py  neg_sampler.py
